--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -2,12 +2,14 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Techport</title>
+    <title>Управление задачами</title>
     <link href='https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900|Inconsolata:300|Material+Icons'
           rel="stylesheet" type="text/css">
 </head>
 <body>
-<div id="app"/>
+<div id="app">
+
+</div>
 <script src="http:\\localhost:8000/main.js"></script>
 </body>
 </html>
