--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <title>Управление задачами</title>
-    <link href='https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900|Inconsolata:300|Material+Icons'
-          rel="stylesheet" type="text/css">
+    <link href='https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900|Material+Icons' rel="stylesheet">
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no, minimal-ui">
 </head>
 <body>
 <div id="app">
 
 </div>
-<script src="http:\\localhost:8000/main.js"></script>
+<script src="http:\\localhost:8000/built/main.js"></script>
 </body>
 </html>
